package org.example.models

interface IDomesticable {
    fun acariciar()
}