@startuml
'https://plantuml.com/class-diagram

interface IDomesticable {
    + {abstract}acariciar()
}

abstract class Animal {
    --atributs--
    - color: String
    --mètodes--
    + constructor(color: String)
    + getColor(): String
    + setColor(color: String)
    + {abstract} menjar()
    + {abstract} dormir()
    + toString(): String
}

class Gos {
    --atributs--
    - propietari: String
    --mètodes--
    + constructor(color: String, propietari: String): super(color)
    + getPropietari(): String
    + setPropietari(propietari: String)
    + menjar()
    + dormir()
    + acariciar()
    + bordar()
    + toString(): String
}

class Lleo {
    --atributs--
    - selvaOrigen: String
    --mètodes--
    + constructor(color: String, selvaOrigen: String): super(color)
    + getSelvaOrigen(): String
    + setSelvaOrigen(selvaOrigen: String)
    + menjar()
    + dormir()
    + rugir()
    + toString(): String
}

class Lloro {
    --atributs--
    - parla: Boolean
    --mètodes--
    + constructor(color: String, parla: Boolean): super(color)
    + getParla(): Boolean
    + setParla(parla: Boolean)
    + menjar()
    + dormir()
    + acariciar()
    + parlar(frase: String)
    + toString(): String
}

Animal <|-- Lleo
Animal <|-- Gos
Animal <|-- Lloro
IDomesticable <|.up. Gos
IDomesticable <|.up. Lloro

@enduml
